Tag sleepy tests as such and migrate some to JUnit 5
Adds a `fast-test` Maven profile for log4j-core-tests to skip over the sleepy tests.

Relates to LOG4J2-2653.

Signed-off-by: Matt Sicker <mattsicker@apache.org>