@@ -16,13 +16,17 @@
  */
 package org.apache.logging.log4j.core.appender.rolling;
 
-import static org.apache.logging.log4j.core.test.hamcrest.Descriptors.that;
-import static org.apache.logging.log4j.core.test.hamcrest.FileMatchers.hasName;
-import static org.hamcrest.Matchers.endsWith;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.core.appender.RollingFileAppender;
+import org.apache.logging.log4j.core.test.junit.LoggerContextSource;
+import org.apache.logging.log4j.core.util.CronExpression;
+import org.apache.logging.log4j.plugins.Named;
+import org.apache.logging.log4j.status.StatusLogger;
+import org.apache.logging.log4j.test.junit.CleanUpDirectories;
+import org.hamcrest.Matcher;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
@@ -31,24 +35,18 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Calendar;
 
-import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.core.appender.RollingFileAppender;
-import org.apache.logging.log4j.core.util.CronExpression;
-import org.apache.logging.log4j.core.test.junit.LoggerContextRule;
-import org.apache.logging.log4j.status.StatusLogger;
-import org.hamcrest.Matcher;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.RuleChain;
+import static org.apache.logging.log4j.core.test.hamcrest.Descriptors.that;
+import static org.apache.logging.log4j.core.test.hamcrest.FileMatchers.hasName;
+import static org.hamcrest.Matchers.endsWith;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * This test currently takes about a minute to run.
  */
+@Tag("sleepy")
 public class RollingAppenderCronOnceADayTest {
 
     private static final int CRON_DELAY = 10;
-    private static final String UTF_8 = "UTF-8";
     private static final String CONFIG = "log4j-rolling-cron-once-a-day.xml";
     private static final String CONFIG_TARGET = "log4j-rolling-cron-once-a-day-target.xml";
     private static final String TARGET = "target";
@@ -59,10 +57,10 @@ public class RollingAppenderCronOnceADayTest {
     private static String cronExpression;
     private static long remainingTime;
 
-    @BeforeClass
+    @BeforeAll
     public static void beforeClass() throws Exception {
       final Path src = FileSystems.getDefault().getPath(TARGET_TEST_CLASSES, CONFIG);
-      String content = new String(Files.readAllBytes(src), StandardCharsets.UTF_8);
+      String content = Files.readString(src);
       final Calendar cal = Calendar.getInstance();
       cal.add(Calendar.SECOND, CRON_DELAY);
       remainingTime = cal.getTimeInMillis() - System.currentTimeMillis();
@@ -76,25 +74,20 @@ public class RollingAppenderCronOnceADayTest {
       StatusLogger.getLogger().debug("Cron expression will be " + cronExpression + " in " + remainingTime + "ms");
     }
 
-    private final LoggerContextRule loggerContextRule = new LoggerContextRule(CONFIG_TARGET);
-
-    @Rule
-    public RuleChain chain = loggerContextRule.withCleanFoldersRule(DIR);
-
     @Test
-    public void testAppender() throws Exception {
+    @CleanUpDirectories(DIR)
+    @LoggerContextSource(value = CONFIG_TARGET, timeout = 10)
+    public void testAppender(final Logger logger, @Named("RollingFile") final RollingFileAppender app) throws Exception {
         // TODO Is there a better way to test than putting the thread to sleep all over the place?
-        final Logger logger = loggerContextRule.getLogger();
         final File file = new File(FILE);
-        assertTrue("Log file does not exist", file.exists());
+        assertTrue(file.exists(), "Log file does not exist");
         logger.debug("This is test message number 1, waiting for rolling");
 
-        final RollingFileAppender app = (RollingFileAppender) loggerContextRule.getLoggerContext().getConfiguration().getAppender("RollingFile");
         final TriggeringPolicy policy = app.getManager().getTriggeringPolicy();
-        assertNotNull("No triggering policy", policy);
-        assertTrue("Incorrect policy type", policy instanceof CronTriggeringPolicy);
+        assertNotNull(policy, "No triggering policy");
+        assertTrue(policy instanceof CronTriggeringPolicy, "Incorrect policy type");
         final CronExpression expression = ((CronTriggeringPolicy) policy).getCronExpression();
-        assertEquals("Incorrect cron expresion", cronExpression, expression.getCronExpression());
+        assertEquals(cronExpression, expression.getCronExpression(), "Incorrect cron expresion");
         logger.debug("Cron expression will be {}", expression.getCronExpression());
 
         // force a reconfiguration
@@ -104,7 +97,7 @@ public class RollingAppenderCronOnceADayTest {
 
         Thread.sleep(remainingTime);
         final File dir = new File(DIR);
-        assertTrue("Directory not created", dir.exists() && dir.listFiles().length > 0);
+        assertTrue(dir.exists() && dir.listFiles().length > 0, "Directory not created");
 
         for (int i = 1; i < 5; i++) {
           logger.debug("Adding some more event {}", i);
@@ -113,14 +106,15 @@ public class RollingAppenderCronOnceADayTest {
         final Matcher<File> hasGzippedFile = hasName(that(endsWith(".gz")));
         int count = 0;
         final File[] files = dir.listFiles();
+        assertNotNull(files);
         for (final File generatedFile : files) {
           if (hasGzippedFile.matches(generatedFile)) {
               count++;
           }
         }
 
-        assertNotEquals("No compressed files found", 0, count);
-        assertEquals("Multiple files found" , 1, count);
+        assertNotEquals(0, count, "No compressed files found");
+        assertEquals(1, count, "Multiple files found");
     }
 
 }
